// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trait Header snapshot renders 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      imageSupport={Object {}}
      label="Level Label"
      markup="Category"
      mathMlOptions={Object {}}
      onChange={[Function]}
      pluginProps={Object {}}
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without description 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      imageSupport={Object {}}
      label="Level Label"
      markup="Category"
      mathMlOptions={Object {}}
      onChange={[Function]}
      pluginProps={Object {}}
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without level tag input 1`] = `
<WithStyles(Component)
  height="100px"
>
  <WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without score point labels 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      imageSupport={Object {}}
      label="Level Label"
      markup="Category"
      mathMlOptions={Object {}}
      onChange={[Function]}
      pluginProps={Object {}}
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={false}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without score point values 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      imageSupport={Object {}}
      label="Level Label"
      markup="Category"
      mathMlOptions={Object {}}
      onChange={[Function]}
      pluginProps={Object {}}
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Standard(s)
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;

exports[`Trait Header snapshot renders without standards 1`] = `
<WithStyles(Component)
  height="160px"
>
  <WithStyles(Component)>
    <WithStyles(Component)
      imageSupport={Object {}}
      label="Level Label"
      markup="Category"
      mathMlOptions={Object {}}
      onChange={[Function]}
      pluginProps={Object {}}
    />
    <WithStyles(Component)>
      <div>
        Scale 
        1
      </div>
      <div>
        <WithStyles(IconButton)
          aria-controls="long-menu"
          aria-haspopup="true"
          aria-label="more"
          onClick={[Function]}
        >
          <pure(MoreVertIcon) />
        </WithStyles(IconButton)>
        <WithStyles(Menu)
          anchorEl={null}
          id="long-menu"
          keepMounted={true}
          onClose={[Function]}
          open={false}
        >
          <WithStyles(MenuItem)
            key="Remove Scale"
            onClick={[Function]}
          >
            Remove Scale
          </WithStyles(MenuItem)>
        </WithStyles(Menu)>
      </div>
    </WithStyles(Component)>
  </WithStyles(Component)>
  <WithStyles(Component)
    setRef={[Function]}
    width="undefinedpx"
  >
    <WithStyles(Component)>
      <div>
        Description
      </div>
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-0"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="C"
        scorePointsValue={0}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-1"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="B"
        scorePointsValue={1}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
    <WithStyles(Component)
      key="secondary-block-part-2"
    >
      <WithStyles(Component)
        alignToRight={false}
        error=""
        imageSupport={Object {}}
        mathMlOptions={Object {}}
        onChange={[Function]}
        pluginProps={Object {}}
        scoreDescriptor="A"
        scorePointsValue={2}
        showScorePointLabels={true}
      />
    </WithStyles(Component)>
  </WithStyles(Component)>
</WithStyles(Component)>
`;
